manifests/traefik/alertmanager-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-ui
  namespace: traefik
spec:
  entryPoints:
    - alertmanager
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-alertmanager
          namespace: monitoring
          port: 9093
