manifests/traefik/argocd-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ui
  namespace: traefik
spec:
  entryPoints:
    - argocd
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: argocd-server
          namespace: argocd
          port: 80
