manifests/traefik/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ui
  namespace: traefik
spec:
  entryPoints:
    - grafana
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          namespace: monitoring
          port: 80
