manifests/traefik/headlamp-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp-ui
  namespace: traefik
spec:
  entryPoints:
    - headlamp
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: headlamp
          namespace: headlamp
          port: 80
