manifests/traefik/longhorn-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ui
  namespace: traefik
spec:
  entryPoints:
    - longhorn
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: longhorn-frontend
          namespace: longhorn-system
          port: 80
