manifests/traefik/prometheus-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ui
  namespace: traefik
spec:
  entryPoints:
    - prometheus
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          namespace: monitoring
          port: 9090
