manifests/traefik/rancher-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rancher-ui
  namespace: traefik
spec:
  entryPoints:
    - rancher
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: rancher
          namespace: cattle-system
          port: 80
